--- a/upload/index.html
+++ b/upload/index.html
@@ -3,15 +3,17 @@
 	<head>
 		<title></title>
 			<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-			<script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.5.12/d3.min.js"></script>
+			<script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.5.12/d3.min.js"></script>  
+			<!-- <script src="http://d3js.org/d3.v4.0.0-alpha.29.min.js"></script> -->
 			<script type="text/javascript" src="http://cdn.rawgit.com/caolan/async/master/dist/async.min.js"></script>
 			<script type="text/javascript" src="http://cdn.rawgit.com/suprb/Nested/master/jquery.nested.js"></script>
 			<link rel="stylesheet" type="text/css" href="./css/style.css"/>
 	</head>
 	<body>
-
+		<input type="checkbox" id="500-views"></input>over 500 views
+		<br>
 		<svg id="bubble-container" style="width:1000px; height: 2000px"></svg>
-		
+		<!-- <svg width="1200" height="1200"><g transform="translate(480,480)"></g></svg> -->
 	</body>
 	<script type="text/javascript" src="./js/index.js"></script>
 
