--- a/upload/index.html
+++ b/upload/index.html
@@ -25,7 +25,7 @@
 								<div class="check-button">
 									<label>
 										<input value="null" type="checkbox" checked>
-										<span> All Types </span>
+										<span> Select All </span>
 									</label>
 								</div>
 							</div>
@@ -38,7 +38,7 @@
 								<div class="check-button">
 									<label>
 										<input value="null" type="checkbox" checked>
-										<span> All Sections</span>
+										<span> Select All</span>
 									</label>
 								</div>
 							</div>
