--- a/upload/index.html
+++ b/upload/index.html
@@ -58,7 +58,7 @@
 		</div>
 
 		<div id="grid"></div>
-			
+		<div id="decade-container"></div>
 	</body>
 	<script type="text/javascript" src="./js/index.js"></script>
 
