--- a/upload/index.html
+++ b/upload/index.html
@@ -60,6 +60,7 @@
 		<div id="grid"></div>
 		<div id="decade-container"></div>
 	</body>
+	<script type="text/javascript" src="./js/common.js"></script>
 	<script type="text/javascript" src="./js/index.js"></script>
 
 </html>
