--- a/upload/voronoi.html
+++ b/upload/voronoi.html
@@ -2,28 +2,30 @@
 <html>
 	<head>
 		<title></title>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.5.12/d3.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.12/d3.min.js"></script>
 
 		<script type="text/javascript" src="http://cdn.rawgit.com/caolan/async/master/dist/async.min.js"></script>
 		<script type="text/javascript" src="http://cdn.rawgit.com/suprb/Nested/master/jquery.nested.js"></script>
 
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.6.1/lodash.min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.6.1/lodash.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.velocity.js"</script>-->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"> </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"> </script>
 
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+		<script src="https://use.typekit.net/dsp5jwb.js"></script>
+		<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-		<link href='http://fonts.googleapis.com/css?family=Roboto:400,900,700,500' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
+		<!-- <link href='//fonts.googleapis.com/css?family=Roboto:400,900,700,500' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/> -->
 		<link rel="stylesheet" type="text/css" href="./css/style.css"/>
 	</head>
 	<body>
-
 		<div class="intro-vis">
 			<div class="star-filler">
 			</div>
@@ -31,20 +33,96 @@
 			</div>
 			<div class="star-filler">
 			</div>
+			<div class="intro-vis-screen">
+			</div>
 		</div>
-		<div class='loading-page'>
+		<div class="loading-page tk-neuzeit-grotesk">
 			<h4>The Universe of</h4>
 			<h1>Miles Davis</h1>
 			<p>Mapping Miles Davis' legacy with every Wikipedia page that mentions him</p>
 		</div>
-
+		<div class="opening-prose-container tk-neuzeit-grotesk">
+			<p class="opening-prose">In 2006, Davis was inducted into the Rock and Roll Hall of Fame,[2] which recognized him as "one of the key figures in the history of jazz".[2] In 2008, his 1959 album Kind of Blue received its fourth platinum certification from the Recording Industry Association of America (RIAA), for shipments of at least four million copies in the United States.[3] On December 15, 2009, the U.S. House of Representatives passed a symbolic resolution recognizing and commemorating the album Kind of Blue on its 50th anniversary, "honoring the masterpiece and reaffirming jazz as a national treasure".
+			</p>
+		</div>
+		<div class="chart-title-container">
+			<p class="chart-title">Miles Davis' Breadth</p>
+			<p class="chart-title-sub">The 4,000 Wikipedia Pages on which he's Mentioned</p>
+		</div>
 		<div id="trigger-1" class="spacer s0"></div>
 		<div id="trigger-2" class="spacer s0"></div>
 
-		<div id="vis">
-			<button id="transform-to-decades">click</button>
-			<h1 id="section-header"></h1>
+
+		<div class="first-chart-container">
+			<div id="vis">
+				<button id="transform-to-decades">click</button>
+				<div class="first-chart-filters">
+					<div class="filter-head">
+						<p class="filter-head-text">FILTER
+						</p>
+					</div>
+					<div class="filter-items">
+						<p class="first-chart-filter">Miles' Discography
+						</p>
+						<p class="first-chart-filter-spacer">|
+						</p>
+						<p class="first-chart-filter">Direct Collaborators
+						</p>
+						<p class="first-chart-filter-spacer">|
+						</p>
+						<p class="first-chart-filter">Musicians
+						</p>
+						<p class="first-chart-filter-spacer">|
+						</p>
+						<p class="first-chart-filter">Other Peeps
+						</p>
+						<p class="first-chart-filter-spacer">|
+						</p>
+						<p class="first-chart-filter">Other Recordings
+						</p>
+						<p class="first-chart-filter-spacer">|
+						</p>
+						<p class="first-chart-filter">Misc.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="first-chart-prose">
+				<div class="first-chart-text-section">
+					<p id="section-header" class="first-chart-section-head">50% Miles Recordings/Works.</p>
+					<p id="section-header" class="first-chart-section-text">In 2006, Davis was inducted into the Rock and Roll Hall of Fame,[2] which recognized him as "one of the key figures in the history of jazz"</p>
+				</div>
+				<div class="first-chart-text-section">
+					<p id="section-header" class="first-chart-section-head">50% Musicians.</p>
+					<p id="section-header" class="first-chart-section-text">In 2006, Davis was inducted into the Rock and Roll Hall of Fame,[2] which recognized him as "one of the key figures in the history of jazz"</p>
+				</div>
+				<div class="first-chart-text-section">
+					<p id="section-header" class="first-chart-section-head">50% Direct Collaborators.</p>
+					<p id="section-header" class="first-chart-section-text">In 2006, Davis was inducted into the Rock and Roll Hall of Fame,[2] which recognized him as "one of the key figures in the history of jazz"</p>
+				</div>
+				<div class="first-chart-text-section">
+					<p id="section-header" class="first-chart-section-head">50% Other People.</p>
+					<p id="section-header" class="first-chart-section-text">In 2006, Davis was inducted into the Rock and Roll Hall of Fame,[2] which recognized him as "one of the key figures in the history of jazz"</p>
+				</div>
+				<div class="first-chart-text-section">
+					<p id="section-header" class="first-chart-section-head">50% Other Recordings.</p>
+					<p id="section-header" class="first-chart-section-text">In 2006, Davis was inducted into the Rock and Roll Hall of Fame,[2] which recognized him as "one of the key figures in the history of jazz"</p>
+				</div>
+				<div class="first-chart-text-section">
+					<p id="section-header" class="first-chart-section-head">Misc.</p>
+					<p id="section-header" class="first-chart-section-text">In 2006, Davis was inducted into the Rock and Roll Hall of Fame,[2] which recognized him as "one of the key figures in the history of jazz"</p>
+				</div>
+			</div>
 		</div>
+
+
+		<div class="chart-title-container">
+			<p class="chart-title">The Wikipedia Pages, by Decade</p>
+			<p class="chart-title-sub">XXXX</p>
+		</div>
+		<div class="second-chart-container">
+		</div>
+
 	</body>
 
 	<script type="text/javascript" src="../data/point_data.js"></script>
