position of tooltip, filters on second graph

--- a/upload/voronoi.html
+++ b/upload/voronoi.html
@@ -53,6 +53,7 @@
 				</p>
 			</div>
 		</div>
+		<div id="hidden-popover-div"></div>
 		<div class="intro-vis">
 			<div class="star-filler">
 			</div>
@@ -107,11 +108,7 @@
 						<p class="filter-head-text">FILTER
 						</p>
 					</div>
-					<div class="filter-items-section">
-						<a href="#" class="second-chart-filter" style="color: lightgrey;">influence</a>
-						<a href="#" class="second-chart-filter" style="color: lightgrey;">biography</a>
-						<a href="#" class="second-chart-filter" style="color: lightgrey;">discography</a>
-						<a href="#" class="second-chart-filter" style="color: lightgrey;">first paragraph</a>
+					<div class="filter-items">
 					</div>
 				</div>
 			</div>
