--- a/upload/voronoi.html
+++ b/upload/voronoi.html
@@ -61,13 +61,15 @@
 			</div>
 			<div class="star-filler">
 			</div>
-			<div class="intro-vis-screen">
-			</div>
+			<!-- <div class="intro-vis-screen">
+			</div> -->
 		</div>
 		<div class="loading-page tk-neuzeit-grotesk">
-			<h4>The  of</h4>
+			<div class="star-filler-two">
+			</div>
+			<h4>The Universe of</h4>
 			<h1>Miles Davis</h1>
-			<p>Mapping Miles Davis' legacy via all the Wikipedia page that mentions him</p>
+			<p>Miles Davis&rsquo; impact on culture, visualized using every Wikipedia page that mentions him</p>
 		</div>
 		<div class="opening-prose-container tk-neuzeit-grotesk">
 			<p class="opening-prose">In 2006, Davis was inducted into the Rock and Roll Hall of Fame,[2] which recognized him as "one of the key figures in the history of jazz".[2] In 2008, his 1959 album Kind of Blue received its fourth platinum certification from the Recording Industry Association of America (RIAA), for shipments of at least four million copies in the United States.[3] On December 15, 2009, the U.S. House of Representatives passed a symbolic resolution recognizing and commemorating the album Kind of Blue on its 50th anniversary, "honoring the masterpiece and reaffirming jazz as a national treasure".
