--- a/upload/voronoi.html
+++ b/upload/voronoi.html
@@ -61,11 +61,11 @@
 			</div>
 			<div class="star-filler">
 			</div>
-			<!-- <div class="intro-vis-screen">
-			</div> -->
 		</div>
 		<div class="loading-page tk-neuzeit-grotesk">
 			<div class="star-filler-two">
+			</div>
+			<div class="intro-vis-screen">
 			</div>
 			<h4>The Universe of</h4>
 			<h1>Miles Davis</h1>
@@ -76,8 +76,8 @@
 			</p>
 		</div>
 		<div class="chart-title-container">
-			<p class="chart-title">Miles Davis&rsquo; Breadth</p>
-			<p class="chart-title-sub">The 4,000 Wikipedia Pages on which he's Mentioned</p>
+			<p class="chart-title">WHERE HE LEFT HIS MARK</p>
+			<p class="chart-title-sub">Let&rsquo;s breakdown the 2,000 Wikipedia Pages</p>
 		</div>
 		<div id="trigger-1" class="spacer s0"></div>
 
@@ -94,6 +94,12 @@
 				</div>
 			</div>
 			<div class="first-chart-prose">
+				<div class="first-chart-prose-section">
+					<p class="first-chart-prose-title">Title
+					</p>
+					<p class="first-chart-prose-body">In 2006, Davis was inducted into the Rock and Roll Hall of Fame,[2] which recognized him as "one of the key figures in the history of jazz"
+					</p>
+				</div>
 			</div>
 		</div>
 
