--- a/upload/voronoi.html
+++ b/upload/voronoi.html
@@ -72,55 +72,60 @@
 			<p>Miles Davis&rsquo; impact on culture, visualized using every Wikipedia page that mentions him</p>
 		</div>
 		<div class="opening-prose-container tk-neuzeit-grotesk">
-			<p class="opening-prose">In 2006, Davis was inducted into the Rock and Roll Hall of Fame,[2] which recognized him as "one of the key figures in the history of jazz".[2] In 2008, his 1959 album Kind of Blue received its fourth platinum certification from the Recording Industry Association of America (RIAA), for shipments of at least four million copies in the United States.[3] On December 15, 2009, the U.S. House of Representatives passed a symbolic resolution recognizing and commemorating the album Kind of Blue on its 50th anniversary, "honoring the masterpiece and reaffirming jazz as a national treasure".
+			<p class="opening-prose">In honor of Miles Davis&rsquo; 90th birthday, we decided to examine his impact on culture. Yes &ndash; Miles Davis is synonymous with Jazz, but you can find his fingerprints on so many disparate ideas.
+			</p>
+			<p class="opening-prose">We started by sorting through <span class="prose-highlight">every Wikipedia page on which he&rsquo;s mentioned.</span> This approach would not only highlight his recordings and collaborators, but also help wrap our mind around everything else, from his reference within Kendrick Lamar&rsquo;s &ldquo;influence&rdquo; section to &ldquo;notable usage&rdquo; of the word &ldquo;Motherfucker.&rdquo;
+			</p>
+			<p class="opening-prose">First, let&rsquo;s take a look at the types of pages on which you find &ldquo;Miles Davis.&ldquo;
 			</p>
 		</div>
-		<div class="chart-title-container">
-			<p class="chart-title">WHERE HE LEFT HIS MARK</p>
-			<p class="chart-title-sub">Let&rsquo;s breakdown the 2,000 Wikipedia Pages</p>
-		</div>
-		<div id="trigger-1" class="spacer s0"></div>
-
 		<div class="first-chart-container">
-			<div id="vis-1" class="vis-container">
-				<button id="transform-to-decades">click</button>
+			<div id="vis-1" class="vis-container trigger-1">
+				<div class="chart-title-container tk-neuzeit-grotesk">
+					<p class="chart-title">The Lasting Mark of Miles Davis</p>
+					<p class="chart-title-sub">The 2,000 Wikipedia Pages on which Miles Davis is Mentioned</p>
+				</div>
+				<!-- <button id="transform-to-decades">click</button> -->
 				<div class="first-chart-filters">
-					<div class="filter-head">
+					<!-- <div class="filter-head">
 						<p class="filter-head-text">FILTER
 						</p>
-					</div>
+					</div> -->
 					<div class="filter-items">
 					</div>
 				</div>
 			</div>
-			<div class="first-chart-prose">
+			<div class="first-chart-prose tk-neuzeit-grotesk">
 				<div class="first-chart-prose-section">
-					<p class="first-chart-prose-title">Title
-					</p>
-					<p class="first-chart-prose-body">In 2006, Davis was inducted into the Rock and Roll Hall of Fame,[2] which recognized him as "one of the key figures in the history of jazz"
+					<!-- <p class="first-chart-prose-title">Title
+					</p> -->
+					<p class="first-chart-prose-body">In honor of Miles Davis’ 90th birthday, we decided to examine his impact on culture. Yes – Miles Davis is synonymous with Jazz, but you can find his fingerprints on so many disparate ideas.
 					</p>
 				</div>
 			</div>
 		</div>
 
-		<div class="chart-title-container">
-			<p class="chart-title">By Decade</p>
-			<p class="chart-title-sub">XXXX</p>
-		</div>
-
-		<div id="trigger-2" class="spacer s0"></div>
 		<div class="second-chart-container">
-			<div id="vis-2" class='vis-container'>
+			<div id="vis-2" class='vis-container trigger-2'>
+				<div class="chart-title-container tk-neuzeit-grotesk">
+					<p class="chart-title">The Lasting Mark of Miles Davis</p>
+					<p class="chart-title-sub">The 2,000 Wikipedia Pages on which Miles Davis is Mentioned</p>
+				</div>
 				<div class="second-chart-filters">
-					<div class="filter-head">
+					<!-- <div class="filter-head">
 						<p class="filter-head-text">FILTER
 						</p>
-					</div>
+					</div> -->
 					<div class="filter-items">
 					</div>
 				</div>
 			</div>
 			<div class="second-chart-prose">
+				<p class="second-chart-prose-body">
+					In honor of Miles Davisâ€™ 90th birthday, we decided to examine his impact on culture. Yes â€“ Miles Davis is synonymous with Jazz, but you can find his fingerprints on so many disparate ideas.
+					Mentioned on Miles Davis' page 9% of Pages (204 pages)
+					In 2006, Davis was inducted into the Rock and Roll Hall of Fame,[2] which recognized him as "one of the key figures in the history of jazz"
+				</p>
 			</div>
 		</div>
 		<div class="chart-title-container-three">
